v3.20.1 (Bug Fix Release)
-Bug fix for info balloons to not word wrap lines (was minimizing balloon width too much on mobile)
-Fixed error logging for base pairings info, when chart / price alert runs for BTC / USD markets

--- a/ui-templates/css/style.css
+++ b/ui-templates/css/style.css
@@ -133,6 +133,7 @@ CLASSES
 
 .coin_info {
 margin: 5px;
+white-space: nowrap;
 }
 
 
